--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -63,12 +63,12 @@
 
     .md {
         h2 {
-            @apply mt-4 pt-4 py-2 text-2xl font-bold tracking-tight text-gray-900 sticky bg-white top-12 scroll-mt-12 sm:top-12 sm:scroll-mt-12
+            @apply mt-4 pt-4 py-2 text-2xl underline underline-offset-4 decoration-1 font-light text-gray-900 sticky bg-white top-12 scroll-mt-12 sm:top-12 sm:scroll-mt-12
         }
 
         h3 {
             /*@apply sticky bg-white top-24 scroll-mt-24 sm:top-24 sm:scroll-mt-24*/
-            @apply mt-4 py-2 text-xl font-bold tracking-tight text-gray-900 scroll-mt-24 sm:scroll-mt-24
+            @apply italic mt-4 py-2 text-xl font-light text-gray-900 scroll-mt-24 sm:scroll-mt-24
         }
 
         p {
