--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -8,6 +8,9 @@ sections:
   - ["考え方", "concepts"]
   - ["使い方やコツ", "tips"]
   - ["パフォーマンス", "performance"]
+  - ["他ライブラリとの組み合わせ", "other-libraries"]
+  - ["コンポーネント", "components"]
+  - ["開発用ツール", "dev-tools"]
   - ["その他", "others"]
 ---
 <div class="bg-white py-24 sm:py-32">
