--- a/app/content/layouts/section.html.erb
+++ b/app/content/layouts/section.html.erb
@@ -8,7 +8,7 @@
         <p class="text-base font-semibold leading-7 text-orange-600">
           <%= current_page.data.section %>
         </p>
-        <h1 class="z-10 bg-white sticky top-0 pt-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+        <h1 class="z-10 bg-white sticky top-0 pt-4 text-3xl font-light text-gray-900 sm:text-4xl">
           <%= current_page.data.title %>
         </h1>
         <p class="mt-6 text-xl leading-8">
