--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -6,10 +6,10 @@ hide_title: true
 sections:
   - ["概要", "introduction"]
   - ["考え方", "concepts"]
-  - ["使い方やコツ", "tips"]
+  - ["全体的なコツ", "tips"]
+  - ["コンポーネントの作り方", "components"]
   - ["パフォーマンス", "performance"]
   - ["他ライブラリとの組み合わせ", "other-libraries"]
-  - ["コンポーネント", "components"]
   - ["開発用ツール", "dev-tools"]
   - ["その他", "others"]
 ---
