--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -78,6 +78,10 @@
             @apply text-gray-700 my-3 text-base/6
         }
 
+        code {
+            @apply px-1 rounded border bg-gray-100 font-mono border-gray-300
+        }
+
         a {
             @apply text-orange-600 hover:text-orange-400 underline
         }
@@ -91,19 +95,19 @@
         }
 
         ul {
-            @apply ml-4 my-4 space-y-2
+            @apply ml-4 my-4 space-y-2 text-base/6
         }
 
         ul li {
-            background: url('check-circle.svg') no-repeat left top 12px;
-            padding: 4px 16px 4px 32px;
+            background: url('check-circle.svg') no-repeat left top 4px;
+            padding: 0px 16px 0px 32px;
             list-style: none;
             margin: 0;
             vertical-align: middle;
         }
 
         ul li li {
-            background: url('check-circle-gray.svg') no-repeat left top 12px;
+            background: url('check-circle-gray.svg') no-repeat left top 4px;
         }
 
         ol {
@@ -112,7 +116,7 @@
 
         ol li {
             /*background: url('check-circle.svg') no-repeat left top 12px;*/
-            padding: 4px 16px 4px 4px;
+            padding: 0px 16px 0px 4px;
             list-style: decimal outside none;
             margin: 0;
             vertical-align: middle;
