--- a/app/views/application/_breadcrumbs.html.erb
+++ b/app/views/application/_breadcrumbs.html.erb
@@ -1,4 +1,5 @@
-<%# locals: (breadcrumbs: []) %>
+<% breadcrumbs = local_assigns.fetch(:breadcrumbs, []) %>
+
 <nav class="flex" aria-label="Breadcrumb">
   <ol role="list" class="flex items-center space-x-4">
     <li>
