--- a/app/views/todos/likes/create.turbo_stream.erb
+++ b/app/views/todos/likes/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.append dom_id(@todo) do %>
   <template>
-    <%= render partial: "todos/todo_row", locals: { todo: @todo } %>
+    <%= render partial: "todos/like_button", locals: { todo: @todo } %>
   </template>
 <% end %>
