--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -7,9 +7,11 @@
 <% content_for :title, "Todos" %>
 
 <div class="max-w-lg mx-auto">
-  <h1 class="text-4xl text-center mb-16">Todos</h1>
 
-
+  <div class="mb-16">
+    <h1 class="text-4xl text-center">Todos</h1>
+    <%= render 'variants_selector' %>
+  </div>
   <table id="todos" class="w-full border border-gray-400 rounded-lg border-spacing-0 border-separate"
          data-controller="todo">
     <% @todos.each do |todo| %>
