--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -70,8 +70,14 @@
         }
 
         h3 {
-            /*@apply sticky bg-white top-24 scroll-mt-24 sm:top-24 sm:scroll-mt-24*/
-            @apply italic mt-4 py-2 text-xl font-light text-gray-900 scroll-mt-24 sm:scroll-mt-24
+            @apply italic mt-4 py-2 text-xl font-light scroll-mt-24 sm:scroll-mt-24
+        }
+        h3 > a {
+            @apply text-inherit decoration-1 hover:text-orange-600;
+        }
+
+        h4 {
+            @apply mt-2 py-2 text-base font-bold text-gray-900
         }
 
         p {
