--- a/app/views/application/_breadcrumbs.html.erb
+++ b/app/views/application/_breadcrumbs.html.erb
@@ -13,13 +13,13 @@
       </div>
     </li>
     <% breadcrumbs.each do |name, url| %>
-      <li>
+      <li class="!ml-1">
         <div class="flex items-center">
           <svg class="h-5 w-5 flex-shrink-0 text-gray-300" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
             <path d="M5.555 17.776l8-16 .894.448-8 16-.894-.448z"/>
           </svg>
-          <%= link_to_unless_current name, url, class: "ml-4 text-sm font-medium text-gray-500 hover:text-gray-700" do %>
-            <span class="ml-4 text-sm font-medium text-gray-500"><%= name %></span>
+          <%= link_to_unless_current name, url, class: "ml-1 text-sm font-medium text-gray-500 hover:text-gray-700" do %>
+            <span class="ml-1 text-sm font-medium text-gray-500"><%= name %></span>
           <% end %>
         </div>
       </li>
