--- a/app/views/todos/_todo_row.html.erb
+++ b/app/views/todos/_todo_row.html.erb
@@ -5,12 +5,7 @@
         <%= render 'like_button', todo: %>
         <%= todo.title %>
       </div>
-      <%= button_to todo, method: :delete, data: { action: "click->todo#delete", todo_row_param: dom_id(todo) }, class: "w-6" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"/>
-        </svg>
-        <span class="sr-only">Close</span>
-      <% end %>
+      <%= render 'delete_button', todo: %>
     </div>
   </td>
 </tr>
