--- a/app/content/layouts/body.html.erb
+++ b/app/content/layouts/body.html.erb
@@ -22,5 +22,6 @@
            hide_top_button: current_page.data.hide_top_button,
            hide_title: current_page.data.hide_title %>
 <%= yield %>
+<%= render 'footer' %>
 </body>
 </html>
