--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<% provide :head, javascript_include_tag("jquery-3.7.1", "data-turbo-track": "reload") %>
+<% provide :head, javascript_include_tag("/javascript/jquery-3.7.1", "data-turbo-track": "reload") %>
+<% provide :head, javascript_include_tag("application_jquery", "data-turbo-track": "reload") %>
 <% set_breadcrumbs [["Users", users_path]] %>
 
 <% content_for :title, "Users" %>
