--- a/app/views/application/_breadcrumbs.html.erb
+++ b/app/views/application/_breadcrumbs.html.erb
@@ -24,5 +24,15 @@
         </div>
       </li>
     <% end %>
+    <% if available_variants.present? %>
+      <li class="!ml-1">
+        <div class="flex items-center">
+          <svg class="h-5 w-5 flex-shrink-0 text-gray-300" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+            <path d="M5.555 17.776l8-16 .894.448-8 16-.894-.448z"/>
+          </svg>
+          <span class="ml-1 text-sm font-medium text-gray-500">variant: <%= request.variant.first %></span>
+        </div>
+      </li>
+    <% end %>
   </ol>
 </nav>
