--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
 <%= render "nav", show_data_reset: true %>
 <div class="container container-lg mx-auto px-4 pt-8">
   <div><%= content_for(:breadcrumbs) %></div>
+  <%= render 'variants_selector' %>
+
   <%= yield %>
 </div>
 <%= render 'global_notification' %>
