--- a/app/views/users/user_profiles/show.html+jquery.erb
+++ b/app/views/users/user_profiles/show.html+jquery.erb
@@ -1,22 +1,21 @@
-<div id="<%= dom_id user_profile %>">
+<div>
   <p>
     <strong>User:</strong>
-    <%= user_profile.user_id %>
+    <%= @user_profile.user_id %>
   </p>
 
   <p>
     <strong>Name:</strong>
-    <%= user_profile.name %>
+    <%= @user_profile.name %>
   </p>
 
   <p>
     <strong>Name jp:</strong>
-    <%= user_profile.name_jp %>
+    <%= @user_profile.name_jp %>
   </p>
 
   <p>
     <strong>Age:</strong>
-    <%= user_profile.age %>
+    <%= @user_profile.age %>
   </p>
-
 </div>
