--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -9,10 +9,13 @@ sections:
 - ["考え方", "concepts"]
 - ["全体的なコツ", "tips"]
 - ["コンポーネントの作り方", "components_howto"]
+- ["Pending UI", "pending_ui"]
 - ["パフォーマンス", "performance"]
 - ["他ライブラリとの組み合わせ", "other_libraries"]
 - ["開発用ツール", "dev-tools"]
+- ["他のフレームワークと一緒に使う", "with_other_frameworks"]
 - ["その他", "others"]
+- ["付録", "appendix"]
 ---
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
