--- a/app/views/users/_user.html+hotwire.erb
+++ b/app/views/users/_user.html+hotwire.erb
@@ -1,3 +1,7 @@
+<%#
+We are using the "span inset-0" pattern to expand the `a` tag (link)
+to accept click from the whole of the `td` tag.
+%>
 <tr>
   <td class="relative">
     <%= link_to user_user_profile_path(user), data: {turbo_frame: "user-profile"} do %>
