--- a/app/views/users/index.html+jquery.erb
+++ b/app/views/users/index.html+jquery.erb
@@ -4,23 +4,22 @@
 
 <% content_for :title, "Users" %>
 
-<div class="grid grid-cols-2 gap-x-2">
-  <div>
-    <div class="mb-16">
-      <h1 class="text-4xl text-center">Users <%= request.variant %></h1>
-    </div>
-    <table id="users" class="min-w-full divide-y divide-gray-300">
-      <thead>
-      <tr>
-        <th>name</th>
-        <th>email</th>
-      </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200">
-      <%= render @users %>
-      </tbody>
-    </table>
-  </div>
-  <div class="border rounded shadow" id="user-profile">
-  </div>
+<div class="mb-16">
+  <h1 class="text-4xl text-center">Users</h1>
+</div>
+
+<div class="grid grid-cols-2 gap-x-4">
+  <table id="users" class="min-w-full divide-y divide-gray-300">
+    <thead>
+    <tr>
+      <th>name</th>
+      <th>email</th>
+    </tr>
+    </thead>
+    <tbody class="divide-y divide-gray-200">
+    <%= render @users %>
+    </tbody>
+  </table>
+  <turbo-frame class="border rounded shadow" id="user-profile">
+  </turbo-frame>
 </div>
