--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -15,6 +15,7 @@ sections:
 - ["開発用ツール", "dev-tools"]
 - ["他のフレームワークと一緒に使う", "with_other_frameworks"]
 - ["その他", "others"]
+- ["意見", "opinions"]
 - ["付録", "appendix"]
 ---
 <div class="bg-white py-24 sm:py-32">
