--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -3,7 +3,7 @@
                                show_data_reset: false) =>
            { hide_top_button:, hide_title:, show_data_reset: } %>
 
-<nav class="w-full bg-white flex p-1 items-start mx-4 items-center">
+<nav class="w-full bg-white flex py-1 px-4 items-start items-center">
   <% if hide_top_button %>
     <span class="w-52 flex-none basis-24"></span>
   <% else %>
@@ -25,6 +25,7 @@
       </a>
     </div>
   <% end %>
+
   <div class="basis-24 pr-2">
     <% if show_data_reset %>
       <%= button_to "Reset Data", fixtures_path, method: :post,
