--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -8,7 +8,7 @@ sections:
 - ["考える手順", "how_to_think"]
 - ["考え方", "concepts"]
 - ["全体的なコツ", "tips"]
-- ["コンポーネントの作り方", "components_howto"]
+- ["コード例", "examples"]
 - ["Pending UI", "pending_ui"]
 - ["パフォーマンス", "performance"]
 - ["他ライブラリとの組み合わせ", "other_libraries"]
