--- a/app/views/iphones/show.html.erb
+++ b/app/views/iphones/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto min-w-[1028px] lg:max-w-5xl">
-  <% set_breadcrumbs [["Apple Store Turbo Stream SSR", iphone_path]] %>
+  <% set_breadcrumbs [["Apple Store Server-side", iphone_path]] %>
 
   <%= render "iphone", iphone: @iphone %>
 </div>
