--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -1,22 +1,8 @@
 ---
-title: Kamal Rails
+title: Anecdotes on Hotwire
 layout: body
 hide_top_button: true
 hide_title: true
-sections:
-- ["概要", "introduction"]
-- ["考える手順", "how_to_think"]
-- ["考え方", "concepts"]
-- ["全体的なコツ", "tips"]
-- ["コード例", "examples"]
-- ["Pending UI", "pending_ui"]
-- ["パフォーマンス", "performance"]
-- ["他ライブラリとの組み合わせ", "other_libraries"]
-- ["開発用ツール", "dev-tools"]
-- ["他のフレームワークと一緒に使う", "with_other_frameworks"]
-- ["その他", "others"]
-- ["意見", "opinions"]
-- ["付録", "appendix"]
 ---
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
@@ -32,19 +18,14 @@ sections:
       </p>
       <%= link_to "コンポーネント一覧", components_path %>
 
-      <% current_page.data.sections.each_entry do |section| %>
-        <% title, folder = section[0], section[1] %>
-        <h3 id="<%= folder %>" class="mt-12 text-2xl font-light text-gray-600"><%= title %></h3>
-        <div class="flex flex-wrap gap-4 mt-4">
-          <% site.glob("#{folder}/*.html.*")
-                 .sort_by { _1.data.order }
-                 .filter { page_showable?(_1) }
-                 .each do |page| %>
-            <%= link_to page.data.title,
-                        page.url,
-                        class: "#{page.data.published ? '' : "opacity-40"} py-2 px-4 border rounded-lg border-orange-300 text-gray-600 font-light hover:text-orange-300 active:bg-orange-100" %>
+      <% current_page.children.sort_by { _1.data.order.to_i }.each do |section_page| %>
+        <h3 class="mt-12 text-2xl font-light text-gray-600">
+          <%= link_to section_page.data.title, section_page.request_path, class: "hover:text-orange-300" %>
+          <% if Rails.env.development? %>
+            <span class="text-xs"><%= section_page.data.order %></span>
           <% end %>
-        </div>
+        </h3>
+        <%= render 'page_children', page: section_page %>
       <% end %>
     </div>
   </div>
