--- a/app/content/layouts/section.html.erb
+++ b/app/content/layouts/section.html.erb
@@ -12,7 +12,7 @@
     <div class="bg-white px-6 py-8 lg:px-8 lg:pl-80">
       <div class="mx-auto max-w-2xl text-base leading-7 text-gray-700">
         <p class="text-base leading-7 text-orange-600">
-          <%= ToplevelPage.first.section_title_for current_section_from(request) %>
+          <%= current_page.parent.data.title %>
         </p>
         <h1 class="z-10 bg-white sticky top-0 pt-1 text-3xl font-light text-gray-900 sm:text-4xl">
           <%= current_page.data.title %>
@@ -23,8 +23,13 @@
         <div class="lg:hidden">
           <!-- chapter list -->
         </div>
-        <div class="mt-10 max-w-3xl mx-auto md">
-          <%= yield %>
+        <div class="mt-10 max-w-3xl mx-auto">
+          <div class="md">
+            <%= yield %>
+          </div>
+          <% if current_page.children.any? %>
+            <%= render "page_children", page: current_page %>
+          <% end %>
         </div>
       </div>
     </div>
