--- a/app/views/components/accordion.html.erb
+++ b/app/views/components/accordion.html.erb
@@ -4,33 +4,21 @@
            title: "Accordion",
            description: "" do %>
 
-  <div class="mt-16 border-t border-gray-500 pt-8 px-4">
+  <div>
     <h2 class="text-4xl pb-8 border-b border-gray-300">
       Frequently Asked Questions
     </h2>
     <%= render 'accordion_row',
-               title: "What is an eSIM?" do %>
-      iPhone 15 or iPhone 15 Pro models purchased in the U.S. or Puerto Rico don’t have a physical SIM
-      tray and activate only using eSIM. You can activate your iPhone outside the country if your carrier supports
-      eSIM. Learn more (Opens in a new window) about using eSIM while traveling.
+               title: "吾輩は猫である。名前はまだ無い。" do %>
+      どこで生れたかとんと見当けんとうがつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。
     <% end %>
     <%= render 'accordion_row',
-               title: "Can I activate an iPhone 15 or iPhone 15 Pro outside of the United States?" do %>
-      iPhone 15 models purchased in the U.S. or Puerto Rico don’t have a physical SIM tray and
-      activate only using eSIM.
-      You can activate your iPhone outside the country if your carrier supports eSIM. Learn more (Opens in a new
-      window) about using eSIM while traveling.
+               title: "この書生の掌の裏でしばらくはよい心持に坐っておった" do %>
+      ふと気が付いて見ると書生はいない。たくさんおった兄弟が一疋ぴきも見えぬ。肝心かんじんの母親さえ姿を隠してしまった。その上今いままでの所とは違って無暗むやみに明るい。眼を明いていられぬくらいだ。はてな何でも容子ようすがおかしいと、のそのそ這はい出して見ると非常に痛い。吾輩は藁わらの上から急に笹原の中へ棄てられたのである。
     <% end %>
     <%= render 'accordion_row',
-               title: "When I buy from apple.com, does my iPhone come ready to use?" do %>
-      Carrier-connected iPhone SE, iPhone 14, iPhone 15, iPhone 16, and iPhone 16 Pro models will arrive ready to
-      activate with eSIM and can connect to your cellular voice and data service without a physical SIM card.<br>
-      If you completed the steps to authorize activation with AT&T, Boost Mobile, T-Mobile, or Verizon when you
-      purchased your new iPhone online, it will arrive ready to use. Just turn it on and follow the onscreen
-      instructions to set it up and activate with the carrier. To activate with eSIM, you will need Wi-Fi for setup.<br>
-      If you choose "Connect to a carrier later" when you buy your iPhone, you can activate with your service when you
-      receive your device. If you're asked to transfer your SIM, follow the onscreen instructions to transfer service
-      from your previous iPhone. To learn more, visit https://support.apple.com/kb/HT212780 (Opens in a new window).<br>
+               title: "吾輩の主人は滅多めったに吾輩と顔を合せる事がない" do %>
+      職業は教師だそうだ。学校から帰ると終日書斎に這入ったぎりほとんど出て来る事がない。家のものは大変な勉強家だと思っている。当人も勉強家であるかのごとく見せている。しかし実際はうちのものがいうような勤勉家ではない。
     <% end %>
   </div>
 <% end %>
