--- a/app/content/layouts/article.html.erb
+++ b/app/content/layouts/article.html.erb
@@ -26,7 +26,7 @@
         <div class="mt-10 max-w-3xl mx-auto">
           <% if current_page.children.any? %>
             <div class="border rounded-lg p-2">
-            <h3 class="text-xl font-light">関連ページ</h3>
+            <h3 class="text-xl font-light scroll-mt-[100px]" id="related-pages">関連ページ</h3>
             <%= render "page_children", page: current_page %>
             </div>
           <% end %>
