--- a/app/views/components/_accordion_row.html.erb
+++ b/app/views/components/_accordion_row.html.erb
@@ -1,10 +1,10 @@
 <div class="py-4 border-b border-gray-300"
      data-controller="accordion"
-     data-accordion-toggle-switch-class="rotate-180"
-     data-action="click->accordion#toggle">
+     data-accordion-toggle-switch-class="rotate-180">
   <h3 class="flex justify-between text-xl cursor-pointer">
-    <span>M<%= title %></span>
-    <div data-accordion-target="switch" class="pt-2 transition-all duration-300">
+    <span><%= title %></span>
+    <div data-accordion-target="switch" class="pt-2 transition-all duration-300"
+         data-action="click->accordion#toggle">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"/>
       </svg>
