--- a/app/views/components/_template.html.erb
+++ b/app/views/components/_template.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for(:title, "#{title} | Tailwind, ERB & Stimulus") %>
 
-<div class="container mx-auto px-4 my-6 sm:px-6 lg:px-8">
+<div class="mx-auto px-4 my-6 sm:px-6 lg:px-8">
   <div class="px-4 py-5 sm:px-6">
     <h1 class="font-light text-6xl text-center">
       <%= title %>
@@ -11,7 +11,7 @@
       <%= description %>
     </p>
   </div>
-  <div class="px-4 py-5 sm:p-6 text-center h-96">
+  <div class="px-4 py-5 sm:p-6 h-96">
     <%= yield %>
   </div>
 </div>
