preload background image on top page

--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -6,6 +6,8 @@ hide_title: true
 background: true
 published: true
 ---
+<% provide :head, preload_link_tag(image_path("pexels-pixabay-51343.webp")) %>
+
 <div class="top py-24 sm:py-32" data-controller="top-page">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-lg">
