--- a/app/content/layouts/article.html.erb
+++ b/app/content/layouts/article.html.erb
@@ -25,14 +25,22 @@
         </div>
         <div class="mt-10 max-w-3xl mx-auto">
           <% if current_page.children.any? %>
-            <div class="border rounded-lg p-2">
-            <h3 class="text-xl font-light scroll-mt-[100px]" id="related-pages">関連ページ</h3>
-            <%= render "page_children", page: current_page %>
+            <div class="border rounded-lg p-2 mb-8">
+              <h3 class="text-xl ml-4 font-light" id="related-pages">関連ページ</h3>
+              <%= render "page_children", page: current_page %>
             </div>
           <% end %>
+
           <div class="md">
             <%= yield %>
           </div>
+
+          <% if current_page.children.any? %>
+            <div class="border rounded-lg p-2 mt-12">
+              <h3 class="text-xl ml-4 font-light" id="related-pages">関連ページ</h3>
+              <%= render "page_children", page: current_page %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
