--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white flex p-1 items-start mx-4">
-  <a href="/" class="flex-none basis-48 text-xl p-1 text-orange-600 flex items-center">
+  <a href="/" class="flex-none basis-48 text-xl p-1 text-orange-600 flex items-center hover:text-orange-400">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5"></path>
     </svg>
