--- a/app/content/application/_page_children.html.erb
+++ b/app/content/application/_page_children.html.erb
@@ -3,10 +3,10 @@
          .sort_by { _1.data.order.to_i }
          .filter { page_showable?(_1) }
          .each do |child_page| %>
-    <li class="m-0 my-1 ml-8 !mt-0 list-decimal list-outside list-image-none italic font-extralight text-3xl text-gray-400 hover:text-orange-400">
+    <li class="m-0 my-1 ml-8 !mt-0 list-decimal list-outside list-image-none italic font-light text-3xl text-gray-400 hover:text-orange-400">
       <%= link_to child_page.data.title,
                   child_page.url,
-                  class: "#{child_page.data.published ? '' : "opacity-40"} text-base font-normal not-italic text-orange-600 hover:text-orange-400" %>
+                  class: "#{child_page.data.published ? '' : "opacity-40"} text-base font-light not-italic text-orange-500 hover:text-orange-300" %>
       <% if Rails.env.development? %>
         <span class="text-xs"><%= child_page.data.order %></span>
       <% end %>
