--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -7,7 +7,7 @@
   <% if hide_top_button %>
     <span class="w-52 flex-none basis-24"></span>
   <% else %>
-    <a href="/" class="flex-none basis-24 text-xl font-light p-1 text-orange-600 flex items-center hover:text-orange-400">
+    <a href="/" class="flex-none basis-24 text-xl font-extralight p-1 text-orange-600 flex items-center hover:text-orange-400">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
            stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5"/>
