--- a/app/content/layouts/article.html.erb
+++ b/app/content/layouts/article.html.erb
@@ -25,7 +25,7 @@
         </div>
         <div class="mt-10 max-w-3xl mx-auto">
           <% if current_page.children.any? %>
-            <div class="border rounded-lg p-2 mb-8">
+            <div class="border rounded-lg p-2 mb-8 bg-white/80">
               <h3 class="text-xl ml-4 font-light" id="related-pages">関連ページ</h3>
               <%= render "page_children", page: current_page %>
             </div>
@@ -36,7 +36,7 @@
           </div>
 
           <% if current_page.children.any? %>
-            <div class="border rounded-lg p-2 mt-12">
+            <div class="border rounded-lg p-2 mt-12 bg-white/80">
               <h3 class="text-xl ml-4 font-light" id="related-pages">関連ページ</h3>
               <%= render "page_children", page: current_page %>
             </div>
