--- a/app/content/layouts/body.html.erb
+++ b/app/content/layouts/body.html.erb
@@ -18,7 +18,7 @@
   <meta name="view-transition" content="same-origin" />
 </head>
 
-<body class="bg-orange-50 bg-fixed bg-cover bg-top <%= current_page.data.background ? "!bg-[#FFE5CA] bg-[url('pexels-pixabay-51343.webp')]" : ""%>">
+<body class="bg-orange-50 bg-fixed bg-cover bg-top <%= @background ? "!bg-[#FFE5CA] bg-[url('pexels-pixabay-51343.webp')]" : ""%>">
 <% page_block_unless_published!(current_page) %>
 <%= render 'nav',
            hide_top_button: current_page.data.hide_top_button,
