--- a/app/content/layouts/section.html.erb
+++ b/app/content/layouts/section.html.erb
@@ -1,20 +1,22 @@
+<% @background = true %>
+
+<% provide :head, preload_link_tag(image_path("pexels-pixabay-51343.webp")) %>
+
 <%= render_layout "body" do %>
   <div class="lg:max-w-6xl lg:mx-auto">
-    <div class="px-6 pt-8 lg:px-8 lg:pl-80 ">
-      <div class="mx-auto max-w-2xl">
-        <%= render "content_breadcrumbs",
-                   current_page: %>
-      </div>
-    </div>
     <div class="hidden ml-2 max-h-full lg:w-72 lg:fixed lg:block">
       <!-- chapter list -->
     </div>
     <div class="px-6 py-8 lg:px-8 lg:pl-80">
-      <div class="mx-auto max-w-2xl text-base leading-7 text-gray-700">
+      <div class="p-8 mx-auto max-w-2xl text-base leading-7 text-gray-700 rounded-lg bg-white/40">
+        <div class="mx-auto max-w-2xl mb-8">
+          <%= render "content_breadcrumbs",
+                     current_page: %>
+        </div>
         <p class="text-base leading-7 text-orange-600">
           <%= current_page.parent.data.title %>
         </p>
-        <h1 class="bg-orange-50 z-10 sticky top-0 pt-1 text-3xl font-light text-gray-900 sm:text-4xl">
+        <h1 class="pt-1 text-3xl font-extralight text-gray-900 sm:text-4xl">
           <%= current_page.data.title %>
         </h1>
         <p class="mt-6 text-xl leading-8">
@@ -28,7 +30,7 @@
             <%= yield %>
           </div>
           <% if current_page.children.any? %>
-            <div class="p-6 border border-gray-200 rounded-lg bg-white/60 backdrop-blur">
+            <div class="p-6 rounded-lg bg-white/80">
               <%= render "page_children", page: current_page %>
             </div>
           <% end %>
