--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -3,9 +3,10 @@ title: Anecdotes on Hotwire
 layout: body
 hide_top_button: true
 hide_title: true
-background: true
 published: true
 ---
+<% @background = true %>
+
 <% provide :head, preload_link_tag(image_path("pexels-pixabay-51343.webp")) %>
 
 <div class="top py-24 sm:py-32" data-controller="top-page">
@@ -22,7 +23,7 @@ published: true
       </div>
       <div>
         <p class="mt-6 text-lg font-normal leading-8 text-gray-400">
-          本サイトは、私が<span class="font-bold italic">Ruby on Railsのフロントエンド エンジニア</span>を目指しながら、<a href="https://hotwired.dev" class="text-orange-600 underline hover:opacity-70 active:text-orange-800">Hotwire</a>について感じたことを綴ったものです
+          経験したこと、感じたこと、<a href="https://hotwired.dev" class="text-orange-600 underline hover:opacity-70 active:text-orange-800">Hotwire</a>のこと
         </p>
       </div>
       <%= link_to "コンポーネント一覧", components_path %>
@@ -31,9 +32,9 @@ published: true
     <div class="md:columns-2 mt-24 max-w-4xl mx-auto gap-6">
       <% current_page.children.sort_by { _1.data.order.to_i }.each do |section_page| %>
         <!-- manually set [&:nth-child](number):mb-0 due to differences between Safari and Chrome/Firefox -->
-        <div class="mb-6 md:[&:nth-child(6)]:mb-0 p-6 break-inside-avoid border border-gray-200 rounded-lg bg-white/70 backdrop-blur"
+        <div class="mb-6 md:[&:nth-child(6)]:mb-0 p-6 break-inside-avoid rounded-lg bg-white/70 backdrop-blur"
              data-top-page-target="section">
-          <h3 class="text-2xl mb-4 font-light text-gray-600">
+          <h3 class="text-2xl mb-4 font-extralight text-gray-600">
             <%= link_to section_page.data.title, section_page.request_path, class: "inline-block hover:text-orange-600" %>
             <% if Rails.env.development? %>
               <span class="text-xs"><%= section_page.data.order %></span>
